add insert method in to atrribute controller
